--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,21 @@
-#board tr td
+body
 {
-    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+table tr td
+{
+    width: 30px;
+    height: 30px;
+}
+
+table tr td button
+{
+    display: block;
+    width: 100%;
+    height: 100%;
 }
