--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,22 @@
+*
+{
+    padding: 0px;
+    margin: 0px;
+}
 body
+{
+    background-color: #548687;
+}
+
+.container
 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px;
+    height: 500px;
 }
 
 table tr td
@@ -16,7 +28,23 @@ table tr td
 table tr td button
 {
     display: block;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    border-radius: 8px;
+    border: none;
+    box-shadow: 0 0 6px black;
+    margin: 4px;
+    font-size: 50px;
+    background-color: #ffffc7;
+}
+
+#reset
+{
+    margin-top: 5px;
+    padding: 8px 15px 8px 15px;
+    font-size: 15px;
+    background-color: #191913;
+    color: white;
+    border: none;
+    border-radius: 8px;
 }
