--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,12 @@ table tr td button
     display: block;
     width: 80px;
     height: 80px;
-    border-radius: 8px;
-    border: none;
+    border: solid;
+    border-radius: 12px;
+    border-width: 6px;
+    border-color: #7D5A50;
     box-shadow: 0 0 6px black;
-    margin: 4px;
+    margin: 3.3px;
     font-size: 50px;
     background-color: #ffffc7;
 }
